--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,6 @@ FastaIO = "a0c94c4b-ebed-5953-b5fc-82fe598ac79f"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Tokenize = "0796e94c-ce3b-5d07-9a54-7f471281c624"
+
+[compat]
+julia = "0.7"
