--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ notifications:
 git:
   depth: 99999999
 
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-#before_script: # homebrew for mac
-#  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
-
-## uncomment the following lines to override the default test script
-#script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("CAOS"); Pkg.test("CAOS"; coverage=true)'
+before_install:
+  - if [ `uname` = "Linux" ]; then
+      sudo apt-get -qq update;
+      sudo apt-get install -y ncbi-blast+;
+    elif [ `uname` = "Darwin" ]; then
+      curl https://repo.continuum.io/miniconda/Miniconda3-4.5.11-MacOSX-x86_64.sh > ~/miniconda.sh;
+      bash ~/miniconda.sh -b -p $HOME/miniconda;
+      export PATH="$HOME/miniconda/bin:$PATH";
+      conda install blast -y -f -c bioconda;
+    fi
+    
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
