--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,7 @@ before_install:
       export PATH="$HOME/miniconda/bin:$PATH";
       conda install blast -y -f -c bioconda;
     fi
-    
+
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
