--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ before_install:
     fi
 
 after_success:
+  - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  # - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
