--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ before_install:
       conda install blast -y -f -c bioconda;
     fi
 
+script:
+  - julia --check-bounds=yes -e 'using Pkg; Pkg.clone(pwd()); Pkg.test("CAOS", coverage=true)'
+  
 after_success:
   - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
