--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,9 @@ before_install:
       export PATH="$HOME/miniconda/bin:$PATH";
       conda install blast -y -f -c bioconda;
     fi
-
-script:
-  - julia --check-bounds=yes -e 'using Pkg; Pkg.test("CAOS", coverage=true)'
-
+# script:
+#   - julia --check-bounds=yes -e 'using Pkg; Pkg.test("CAOS", coverage=true)'
 after_success:
   - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  # - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'cd(using Pkg; Pkg.dir("CAOS")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
