adds documentation set up

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ before_install:
 before_script:
   - export PATH=$HOME/.local/bin:$PATH
 after_success:
-  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
   - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
