--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,47 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
-language: julia
-os:
-  - linux
-  - osx
-
-julia:
-  - 0.7
-  - 1.0
 
 matrix:
-  allow_failures:
-    - julia: nightly
+  include:
+    - stage: test
+      language: julia
+      os:
+        - linux
+        - osx
 
-notifications:
-  email: false
+      julia:
+        - 0.7
+        - 1.0
 
-git:
-  depth: 99999999
+      matrix:
+        allow_failures:
+          - julia: nightly
 
-before_install:
-  - if [ `uname` = "Linux" ]; then
-      sudo apt-get -qq update;
-      sudo apt-get install -y ncbi-blast+;
-    elif [ `uname` = "Darwin" ]; then
-      curl https://repo.continuum.io/miniconda/Miniconda3-4.5.11-MacOSX-x86_64.sh > ~/miniconda.sh;
-      bash ~/miniconda.sh -b -p $HOME/miniconda;
-      export PATH="$HOME/miniconda/bin:$PATH";
-      conda install blast -y -f -c bioconda;
-    fi
-before_script:
-  - export PATH=$HOME/.local/bin:$PATH
-after_success:
-  - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
-  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+      notifications:
+        email: false
+
+      git:
+        depth: 99999999
+
+      before_install:
+        - if [ `uname` = "Linux" ]; then
+            sudo apt-get -qq update;
+            sudo apt-get install -y ncbi-blast+;
+          elif [ `uname` = "Darwin" ]; then
+            curl https://repo.continuum.io/miniconda/Miniconda3-4.5.11-MacOSX-x86_64.sh > ~/miniconda.sh;
+            bash ~/miniconda.sh -b -p $HOME/miniconda;
+            export PATH="$HOME/miniconda/bin:$PATH";
+            conda install blast -y -f -c bioconda;
+          fi
+      before_script:
+        - export PATH=$HOME/.local/bin:$PATH
+      after_success:
+        - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+    - stage: deploy docs
+      language: julia
+      os: linux
+      julia:
+        - 1.0
+
+      script:
+        - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
