--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,23 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
+language: julia
 
-matrix:
+os:
+  - linux
+  - osx
+
+julia:
+  - 0.7
+  - 1.0
+
+notifications:
+  email: false
+
+git:
+  depth: 99999999
+
+jobs:
   include:
     - stage: test
-      language: julia
-      os:
-        - linux
-        - osx
-
-      julia:
-        - 0.7
-        - 1.0
-
-      matrix:
-        allow_failures:
-          - julia: nightly
-
-      notifications:
-        email: false
-
-      git:
-        depth: 99999999
-
       before_install:
         - if [ `uname` = "Linux" ]; then
             sudo apt-get -qq update;
@@ -40,8 +36,6 @@ matrix:
     - stage: deploy docs
       language: julia
       os: linux
-      julia:
-        - 1.0
-
+      julia: 1.0
       script:
         - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
