--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,7 +9,7 @@ theme:
   palette:
     primary: 'red'
     accent: 'pink'
-  # logo: 'images/bcbi_logo.jpeg'
+  logo: build/assets/bcbi-logo.svg
 
 markdown_extensions:
   - extra
@@ -19,6 +19,6 @@ markdown_extensions:
 
 docs_dir: 'build'
 
-pages:
+nav:
 - Home: index.md
 - Functions: documentation.md
