updates mkdocs and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,4 @@ jobs:
       os: linux
       julia: 0.7
       script:
-        - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
+        - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add(["Documenter", "HTTP", "JSON"]); include(joinpath("docs", "make.jl"))'
