--- a/ready.yml
+++ b/ready.yml
@@ -9,8 +9,7 @@ authors:
     github_user: INSARKAR
   - name: Paul Stey
     github_user: pstey
-docs_url:         https://github.com/bcbi/CAOS.jl/latest/
 repo_url:         https://github.com/bcbi/CAOS.jl # not required if repo is part of compbiocore organization.
 site_description: This package provides an interface to use the CAOS algorithm for sequence classification.
-docs_url:  https://bcbi.github.io/CAOS.jl # if it's a software and has documantion
+docs_url:  https://bcbi.github.io/CAOS.jl/latest/ # if it's a software and has documantion
 type:             software # choose from [web_app, software]
