--- a/ready.yml
+++ b/ready.yml
@@ -1,14 +1,10 @@
 repo:             CAOS.jl
 site_name:        CAOS.jl
-authors:
+maintainers:
   - name: Jason Katz
     github_user: jasonk33
   - name: Fernando Gelin
     github_user: fernandogelin
-  - name: Neil Sarkar
-    github_user: INSARKAR
-  - name: Paul Stey
-    github_user: pstey
 repo_url:         https://github.com/bcbi/CAOS.jl # not required if repo is part of compbiocore organization.
 site_description: This package provides an interface to use the CAOS algorithm for sequence classification.
 docs_url:  https://bcbi.github.io/CAOS.jl/latest/ # if it's a software and has documantion
