--- a/.travis.yml
+++ b/.travis.yml
@@ -37,13 +37,17 @@ matrix:
         - julia -e 'import Pkg; Pkg.instantiate(); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
 
     - stage: semantic release
+      if: branch = master AND type != pull_request
       language: python
       os: linux
       python: 3.6
+      before_script: skip
       install:
         - pip install typing
         - pip install python-semantic-release
       script:
         - git config --global user.name "semantic-release (via TravisCI)"
         - git config --global user.email "semantic-release@travis"
-        - semantic-release --patch publish
+        - semantic-release publish
+      after_script: skip
+      after_success: skip
